Visual fixes on lantern stats on smaller screens. Lantern stats display are reset when the round ends

--- a/private/styles/dyslexic.scss
+++ b/private/styles/dyslexic.scss
@@ -38,6 +38,10 @@ h1, h2, h3, h4, h5 {
 }
 
 #wrecking {
+  > div {
+    max-height: calc(100% - 3.5em);
+  }
+
   .stationStats {
     line-height: 1.9em;
   }
